force-app/main/default/objects/Warehouse__c/recordTypes/Dealer_Warehouse.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Warehouse</fullName>
    <active>true</active>
    <label>Dealer Warehouse</label>
</RecordType>