force-app/main/default/objects/Warehouse__c/recordTypes/Manufacturer_Warehouse.recordType-meta.xml
<RecordType>
    <fullName>Manufacturer_Warehouse</fullName>
    <active>true</active>
    <label>Manufacturer Warehouse</label>
</RecordType>