force-app/main/default/objects/Warehouse__c/listViews/Dealer_Warehouse.listView-meta.xml
<ListView>
    <fullName>Dealer_Warehouse</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Warehouse__c.Dealer_Warehouse</value>
    </filters>
    <label>Dealer Warehouse</label>
</ListView>