force-app/main/default/objects/Warehouse__c/listViews/Manufacturer_Warehouse.listView-meta.xml
<ListView>
    <fullName>Manufacturer_Warehouse</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Zone__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Warehouse__c.Manufacturer_Warehouse</value>
    </filters>
    <label>Manufacturer Warehouse</label>
</ListView>